<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foreseer.reflexo.Statistics.StatisticsActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/tab_statistics_twoSquares"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:columnCount="2"
                    android:rowCount="5"
                    android:rowOrderPreserved="false">

                    <TextView
                        android:id="@+id/textView_twoSquares_totalTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_tries"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_totalTriesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="1"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_correctTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_tries"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_correctTriesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="1"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_incorrectTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incorrect_tries"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_incorrectTriesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="1"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_percentageCorrectTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_percentage"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_percentageCorrectTriesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="1"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_averageReactionTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_reaction_time"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_twoSquares_averageReactionTimeNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="start"
                        android:layout_row="4"
                        android:text="1"
                        android:textSize="22sp" />
                </GridLayout>

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/tab_statistics_fourSquares"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:columnCount="2"
                    android:rowCount="5"
                    android:rowOrderPreserved="false">

                    <TextView
                        android:id="@+id/textView_fourSquares_totalTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_tries"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_totalTriesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="1"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_correctTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_tries"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_correctTriesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="1"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_incorrectTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incorrect_tries"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_incorrectTriesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="1"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_percentageCorrectTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_percentage"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_percentageCorrectTriesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="1"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_averageReactionTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_reaction_time"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_fourSquares_averageReactionTimeNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="start"
                        android:layout_row="4"
                        android:text="1"
                        android:textSize="22sp" />
                </GridLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</android.support.constraint.ConstraintLayout>
